# okapi

./: Cargo.toml  README.md  release.sh
examples/json-web-api/: Cargo.toml
examples/json-web-api/src/: main.rs
examples/secure_request_guard/: Cargo.toml
examples/secure_request_guard/src/: main.rs
okapi/src/: openapi3.rs
rocket-okapi/: Cargo.toml
rocket-okapi-codegen/src/openapi_attr/: mod.rs
rocket-okapi-ui/: Cargo.toml
rocket-okapi-ui/src/: config.rs  lib.rs  redirect.rs
rocket-okapi/src/: lib.rs  swagger_ui.rs
rocket-okapi/src/handlers/: openapi.rs
rocket-okapi/src/request/: mod.rs
rocket-okapi/src/response/: responder_impls.rs
