[package]
name = "rocket_okapi_fork"
description = "OpenAPI (AKA Swagger) document generation for Rocket applications, forked version from rocket_okapi"
version = "0.8.0-rc.1"
repository = "https://github.com/TotalKrill/okapi"
authors = ["Graham Esau <gesau@hotmail.co.uk>, Kristoffer Ödmark <kristoffer@widefind.se>"]
edition = "2018"
license = "MIT"
keywords = ["rust", "openapi", "swagger", "rocket"]

[dependencies]
schemars = { version = "0.8" }
okapi = { version = "0.6.0", path = "../okapi", package = "okapi_fork" }
rocket_okapi_codegen = { version = "0.7.1", path = "../rocket-okapi-codegen", package = "rocket_okapi_codegen_fork" }
rocket_okapi_ui = { version = "0.1.0-rc.1", path = "../rocket-okapi-ui", optional = true }
serde = "1.0"
serde_json = "1.0"

[dependencies.rocket]
git              = "https://github.com/SergioBenitez/Rocket"
branch           = "v0.5-rc"
version          = "0.5.0-rc.1"
default-features = false
features         = ["json"]

[features]
building-docs = ["rocket_okapi_ui"]
