[package]
name = "json_web_api"
version = "0.1.0"
authors = ["Graham Esau <gesau@hotmail.co.uk>"]
edition = "2018"

[dependencies]
schemars = { version = "0.8" } #, features = ["preserve_order"] }
okapi = { version = "0.6.1", path = "../../okapi", package = "okapi_fork" }
rocket_okapi = { version = "0.8.0-rc.1", path = "../../rocket-okapi", package = "rocket_okapi_fork" }
rocket_okapi_ui = { version = "0.1.0-rc.1", path = "../../rocket-okapi-ui" }
serde = "1.0"

[dependencies.rocket]
git              = "https://github.com/SergioBenitez/Rocket"
branch           = "v0.5-rc"
version          = "0.5.0-rc.1"
default-features = false
features         = ["json"]
